--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
+.idea/*
 *.iws
 *.iml
 *.ipr
@@ -31,3 +31,12 @@ build/
 
 ### VS Code ###
 .vscode/
+!/.idea/
+
+logs
+logs/*
+
+.DS_Store
+.DS_Store/
+
+bootstrap.yml
