--- a/dashboard-portal/src/main/resources/application.yml
+++ b/dashboard-portal/src/main/resources/application.yml
@@ -22,3 +22,16 @@ spring:
 
 server:
   port: 8081
+
+
+mybatis-plus:
+  global-config:
+    db-config:
+      id-type: auto #全局默认主键类型设置为自增
+    configuration:
+      auto-mapping-behavior: partial #只对非嵌套的 resultMap 进行自动映射
+      map-underscore-to-camel-case: true #开启自动驼峰命名规则映射
+
+  logging:
+    level:
+      com.hyl.portal.mapper: debug
