commonresult, CRUD api

--- a/dashboard-portal/src/main/resources/application.yml
+++ b/dashboard-portal/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://110.42.187.29:3306/pro_backend?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://110.42.187.29:3306/jwxt?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
