--- a/dashboard-portal/src/main/resources/application.yml
+++ b/dashboard-portal/src/main/resources/application.yml
@@ -24,6 +24,14 @@ spring:
     username: support@techtree.tech
     password: wGac8XyteiUFZxug
     default-encoding: UTF-8
+    port: 465
+    properties:
+      mail:
+        smtp:
+          socketFactory:
+            class: javax.net.ssl.SSLSocketFactory
+        debug: true
+
   redis:
     host: 110.42.187.29
     port: 6379
@@ -34,8 +42,10 @@ spring:
         max-idle: 20
         max-wait: 1000
         min-idle: 0
-
     timeout: 30000
+  mvc:
+    async:
+      request-timeout: 2000
 
 
 server:
